<resources>
    <!-- global -->
    <string name="app_name">Converter Lab</string>
    <string name="google_maps_key">AIzaSyBGLOcPxckkhsds6WJoMM2OzUFbaTPLgOo</string>

    <!-- home screen -->
    <string name="bank_name">Name</string>
    <string name="bank_region">Region</string>
    <string name="bank_city">City</string>
    <string name="bank_phone" formatted="false">Тел.: %s</string>
    <string name="bank_address" formatted="false">Адресс: %s</string>
    <string name="menu_link">Link</string>
    <string name="menu_map">Map</string>
    <string name="menu_phone">Phone</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_search">Search</string>
    <string name="action_search">Search</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
    <string name="no_internet_connection_map">Для просмотра карты Вам необходимо подключение к интернету</string>
    <string name="no_data">Нет данных. \n Для обновления данных Вам необходимо подключение к интернету</string>
    <string name="data_update">Данные обновлены</string>
    <string name="message_not_valid_address">Данные по адрессу %s не коректные</string>
    <string name="loading_lat_lng">Загрузка координат…</string>

    <!-- detail screen -->
    <string name="fab_call">Позвонить</string>
    <string name="fab_link">Сайт</string>
    <string name="fab_map">Карта</string>
    <string name="desc">Description</string>
    <string name="currencies_names">Название валюты</string>
    <string name="sales_purchase">Покупка/ \n Продажа</string>

    <!-- detail_share_dialog screen -->
    <string name="action_share">Поделиться</string>
    <string name="bank_share">SHARE</string>
    <string name="image_saving_problem">Возникла проблема с сохранение фото в памяти телефона</string>
    <string name="title_need_permission">Необходимо разрешение</string>
    <string name="message_need_permission">Для пересылки фотографии с курсами валют нужно разрешение для сохранение фото в памяти телефона.</string>
    <string name="answer_grant">Предоставить</string>
    <string name="answer_cancel">Запретить</string>
    <string name="message_no_permission">Нет разрешения</string>
    <string name="message_path_to_permisions">Go to Permissions to Grant Phone</string>


</resources>
