<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_link"
        android:enabled="true"
        android:icon="@drawable/ic_link"
        android:title="@string/menu_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_phone"
        android:enabled="true"
        android:title="@string/menu_phone"
        android:icon="@drawable/ic_phone"
        />
    <item
        android:id="@+id/action_detail"
        android:enabled="true"
        android:icon="@drawable/ic_next"
        android:title="@string/menu_detail"
        app:showAsAction="ifRoom" />
</menu>