<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/cardview_dark_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tvBankName_RV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvRegionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBankName_RV"
                android:text="@string/bank_region"
                android:textSize="@dimen/text_size_medium"
                />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRegionName"
                android:text="@string/bank_city"
                android:textSize="@dimen/text_size_medium"
                />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvCityName"
                android:text="@string/bank_phone"
                android:textSize="@dimen/text_size_medium"/>


            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvPhone"
                android:text="@string/bank_address"
                android:textSize="@dimen/text_size_medium"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/light_grey"
            android:orientation="horizontal"
           >

            <ImageButton
                android:id="@+id/ibLink"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/link"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_link"
                />

            <ImageButton
                android:id="@+id/ibMap"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/link"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_map"
                />

            <ImageButton
                android:id="@+id/ibPhone"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/link"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_phone"/>
            <ImageButton
                android:id="@+id/ibDetail"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:contentDescription="@string/link"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_detail"/>


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>