<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_for_currencies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:id="@+id/lll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/cardview_dark_background"
                        fab:cardCornerRadius="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvBankName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="@string/app_name"
                                android:textColor="@color/colorAccent"
                                android:textSize="@dimen/text_size_large"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:id="@+id/tvCityName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/bank_city"
                                android:textSize="@dimen/text_size_medium"
                                />

                            <TextView
                                android:id="@+id/tvRegionName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/bank_region"
                                android:textSize="@dimen/text_size_medium"
                                />

                            <TextView
                                android:id="@+id/tvPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/bank_phone"
                                android:textSize="@dimen/text_size_medium"/>


                            <TextView
                                android:id="@+id/tvAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/bank_address"
                                android:textSize="@dimen/text_size_medium"/>
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_view_detail"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/cardview_dark_background"
                        fab:cardCornerRadius="2dp"
                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/tvCurrenciesNames"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerHorizontal="true"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="5dp"
                                android:layout_toLeftOf="@+id/tvSalesPurchase"
                                android:text="@string/currencies_names"
                                android:textSize="@dimen/text_size_medium"/>

                            <TextView
                                android:id="@+id/tvSalesPurchase"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginStart="5dp"
                                android:text="@string/sales_purchase"
                                android:textSize="@dimen/text_size_medium"/>


                        </RelativeLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_view_text"
                        android:layout_margin="10dp"
                        android:background="@color/cardview_dark_background"
                        fab:cardCornerRadius="2dp"
                        >

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view_organization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"/>

                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <com.github.clans.fab.FloatingActionMenu
                    android:id="@+id/floating_action_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="10dp"
                    fab:layout_anchor="@+id/lll"
                    fab:menu_animationDelayPerItem="55"
                    fab:menu_backgroundColor="#ccdedada"
                    fab:menu_buttonSpacing="10dp"
                    fab:menu_colorNormal="@color/colorAccent"
                    fab:menu_colorPressed="@color/colorAccent"
                    fab:menu_colorRipple="#99d4d4d4"
                    fab:menu_fab_size="normal"
                    fab:menu_icon="@drawable/ic_action_menu"
                    fab:menu_labels_colorNormal="#333"
                    fab:menu_labels_colorPressed="#444"
                    fab:menu_labels_colorRipple="#66efecec"
                    fab:menu_labels_cornerRadius="3dp"
                    fab:menu_labels_ellipsize="none"
                    fab:menu_labels_hideAnimation="@anim/fab_scale_down"
                    fab:menu_labels_margin="0dp"
                    fab:menu_labels_maxLines="1"
                    fab:menu_labels_padding="7dp"
                    fab:menu_labels_position="left"
                    fab:menu_labels_showAnimation="@anim/fab_scale_up"
                    fab:menu_labels_showShadow="true"
                    fab:menu_labels_singleLine="false"
                    fab:menu_labels_style="@style/MenuLabelsStyle"
                    fab:menu_labels_textColor="#f2f1f1"
                    fab:menu_labels_textSize="15sp"
                    fab:menu_openDirection="up"
                    fab:menu_shadowColor="#66aff198"
                    fab:menu_shadowRadius="4dp"
                    fab:menu_shadowXOffset="1dp"
                    fab:menu_shadowYOffset="4dp"
                    fab:menu_showShadow="true">

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/floating_action_menu_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_map"
                        fab:fab_colorNormal="@android:color/darker_gray"
                        fab:fab_colorPressed="@color/colorAccent"
                        fab:fab_label="@string/fab_map"
                        fab:fab_size="mini"
                        fab:menu_colorNormal="@android:color/transparent"
                        />

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/floating_action_menu_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_link"
                        fab:fab_colorNormal="@android:color/darker_gray"
                        fab:fab_colorPressed="@color/colorAccent"
                        fab:fab_label="@string/fab_link"
                        fab:fab_size="mini"
                        fab:menu_colorNormal="@android:color/transparent"/>

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/floating_action_menu_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_phone"
                        fab:fab_colorNormal="@android:color/darker_gray"
                        fab:fab_colorPressed="@color/colorAccent"
                        fab:fab_label="@string/fab_call"
                        fab:fab_size="mini"
                        fab:menu_colorNormal="@android:color/transparent"/>
                </com.github.clans.fab.FloatingActionMenu>

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>