<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.shtainyky.converterlab.activities.activities.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            fab:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/content_detail"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/floating_action_menu"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            fab:layout_anchor="@+id/include"
            fab:menu_animationDelayPerItem="55"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_colorPressed="@color/colorAccent"
            fab:menu_colorRipple="#99d4d4d4"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/ic_menu"
            fab:menu_labels_colorNormal="#333"
            fab:menu_labels_colorPressed="#444"
            fab:menu_labels_colorRipple="#66efecec"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_scale_down"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_scale_up"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="#f2f1f1"
            fab:menu_labels_textSize="15sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66aff198"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="4dp"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/floating_action_menu_map"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:src="@drawable/ic_action_map"
                fab:fab_label="@string/fab_map"
                fab:fab_size="mini"
                fab:menu_colorNormal="@android:color/transparent"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/floating_action_menu_link"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:src="@drawable/ic_action_link"
                fab:fab_label="@string/fab_link"
                fab:fab_size="mini"
                fab:menu_colorNormal="@android:color/transparent"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/floating_action_menu_phone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:src="@drawable/ic_action_phone"
                fab:fab_label="@string/fab_call"
                fab:fab_size="mini"
                fab:menu_colorNormal="@android:color/transparent"/>


        </com.github.clans.fab.FloatingActionMenu>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
